# nom-parse-macros

./: Cargo.toml  README.md
examples/: basic_enum_with_members.rs  basic_struct_with_members.rs  derived_fields.rs  use_matching_string.rs  use_prefix_and_suffix.rs
src/: fields.rs  lib.rs  nom_packages.rs  parse_format.rs  parsed_item.rs  parser_generator.rs  settings.rs  string_matching.rs
tests/: basic_enum_with_members.rs  basic_struct_with_members.rs  derived_fields.rs  different_input_types.rs  enums.rs  generics.rs  string_matching.rs  structs.rs  use_matching_string.rs
