[package]
name = "nom-parse-macros"
description = "Procedural macros for generating parser functions for the nom libary"
version = "0.2.0"
license = "MIT/Apache-2.0"
keywords = ["nom", "parser", "parsable"]
categories = ["parsing"]
authors = ["Marc de Jonge <marcdejonge@gmail.com>"]
homepage = "https://github.com/marcdejonge/nom-parse-macros"
repository = "https://github.com/marcdejonge/nom-parse-macros.git"
readme = "README.md"
edition = "2021"

include = [
    "src/*.rs",
    "LICENSE-*",
    "README.md",
]

[lib]
proc-macro = true
path = "src/lib.rs"

[[example]]
name = "basic_enum_with_members"
path = "examples/basic_enum_with_members.rs"

[[example]]
name = "basic_struct_with_members"
path = "examples/basic_struct_with_members.rs"

[[example]]
name = "derived_fields"
path = "examples/derived_fields.rs"

[[example]]
name = "use_matching_string"
path = "examples/use_matching_string.rs"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full", "visit", "visit-mut"] }
itertools = "0.14.0"
phf = { version = "0.11.2", features = ["macros"] }
nom-parse-trait = "0.2.0"
nom = "7.1.3"
